--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+<ion-tabs selectedIndex="0">
+  <ion-tab [root]="balanceRoot" tabTitle="" tabIcon="icon-Scan"></ion-tab>
+  <ion-tab [root]="paymentRoot" tabTitle="" tabIcon="icon-Transaction"></ion-tab>
+  <ion-tab [root]="homeRoot" tabTitle="" tabIcon="icon-Menu"></ion-tab>
+  <ion-tab [root]="profileRoot" tabTitle="" tabIcon="icon-Account"></ion-tab>
+  <ion-tab [root]="transactionRoot" tabTitle="" tabIcon="icon-Recive-money"></ion-tab>
 </ion-tabs>
