--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -37,7 +37,7 @@
 
         <ion-card padding margin-top>
           <ion-card-header padding>
-            <p padding-top class="card-title" ion-text color="pruple-heading">
+            <p padding-top class="card-title" ion-text color="pruple-text">
               Introduction
             </p>
           </ion-card-header>
