--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,15 +1,14 @@
-<ion-header class="custom-bg">
-  <custom-header></custom-header>
+<ion-header>
+  <custom-header [show-search]="true"></custom-header>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+
+
+  <ion-row padding-top>
+    <ion-col col-6 *ngFor="let d of data">
+      <service-card [data]="d"></service-card>
+    </ion-col>
+  </ion-row>
+
 </ion-content>
