--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -27,17 +27,17 @@
             <form margin-top #loginForm="ngForm" (submit)="login()">
               <ion-list no-lines>
                 <ion-item margin-top class="form-input">
-                  <ion-input text-center color="pruple-heading" round type="email" placeholder="EMAIL" name="email"
+                  <ion-input text-center color="pruple-text" round type="email" placeholder="EMAIL" name="email"
                     required [(ngModel)]="account.email"></ion-input>
                 </ion-item>
                 <ion-item margin-top class="form-input">
-                  <ion-input text-center color="pruple-heading" round type="password" placeholder="PASSWORD" required
+                  <ion-input text-center color="pruple-text" round type="password" placeholder="PASSWORD" required
                     [(ngModel)]="account.password" name="password"></ion-input>
                 </ion-item>
-                <button margin-top ion-button round block color="pruple-heading" [disabled]="!loginForm.valid">SIGN IN</button>
+                <button margin-top ion-button round block color="pruple-text" [disabled]="!loginForm.valid">SIGN IN</button>
               </ion-list>
             </form>
-            <!-- <p ion-text color="pruple-heading">
+            <!-- <p ion-text color="pruple-text">
               Brake is an amazing UI Kit for designers & developers who want to brake rules and be different.
             </p> -->
 
@@ -48,7 +48,7 @@
                 <span ion-text color="dark">
                   Have no account yet ?
                 </span>
-                <span (click)="goToRegister()" ion-text color="pruple-heading">
+                <span (click)="goToRegister()" ion-text color="pruple-text">
                   Sign Up
                 </span>
               </ion-col>
